grid gap og padding paa works fixed, contact fixes, font storrelser

--- a/styles.css
+++ b/styles.css
@@ -496,12 +496,14 @@ span.hiddenn {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     margin: 0 auto;
-    grid-gap: 0px;
+    grid-gap: 20px;
+    padding: 20px;
 }
 
 .grid-item {
-    margin: 20px;
+
     text-align: center;
+    margin-bottom: 30px;
 
 }
 
@@ -509,10 +511,12 @@ span.hiddenn {
     font-family: 'Optima';
     text-align: center;
     font-size: 1.3rem;
+    margin-bottom: 8px;
 }
 
 .grid-item .knap {
     font-size: 0.8rem;
+
 }
 
 .section-header {
@@ -600,6 +604,7 @@ span.hiddenn {
     text-transform: uppercase;
     margin-bottom: 0;
     margin-top: 3px;
+    margin-left: -3px;
 
 }
 
@@ -796,7 +801,7 @@ span.hiddenn {
 
 .case-title {
     font-family: 'Optima';
-    font-size: 4rem;
+    font-size: 1.7rem;
     text-transform: uppercase;
     text-align: center;
     font-weight: normal;
@@ -916,6 +921,15 @@ footer p {
         padding: 10px;
     }
 
+    .case-title {
+        font-family: 'Optima';
+        font-size: 2.5rem;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: normal;
+
+    }
+
 
 
 }
@@ -946,14 +960,14 @@ footer p {
         text-transform: uppercase;
         margin-bottom: 0;
         margin-top: 3px;
+        margin-left: -28px;
     }
 
     #contact .col1 {
 
-        text-align: center;
         flex-grow: 2;
         flex-basis: 300px;
-
+        text-align: center;
     }
 
 
@@ -1041,6 +1055,20 @@ footer p {
     }
 
 
+    .case-title {
+        font-family: 'Optima';
+        font-size: 3.9rem;
+        text-transform: uppercase;
+        text-align: center;
+        font-weight: normal;
+
+    }
+
+
+    .grid-item {
+        margin-bottom: 20px;
+    }
+
 
 
 
@@ -1076,6 +1104,7 @@ footer p {
         padding-left: 0;
         margin-top: 20vh;
     }
+
 
 }
 
@@ -1122,7 +1151,8 @@ footer p {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
         margin: 0 auto;
-        grid-gap: 0px;
+        grid-gap: 20px;
+        padding: 20px;
     }
 
     #about .text {
